--- a/index1.html
+++ b/index1.html
@@ -35,28 +35,41 @@
 
             <h1>Revendo CSS</h1>
 
-            <table>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio pariatur unde suscipit! Quaerat,
+                voluptas necessitatibus, aut distinctio doloribus at voluptatum voluptatibus delectus quia inventore
+                nihil incidunt, iste eaque magni autem.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet tenetur quas quibusdam distinctio obcaecati reiciendis possimus soluta, repudiandae laboriosam doloribus fugit omnis nam. Quas, eius ad. Quos, eum praesentium.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, distinctio laboriosam. Minima assumenda quas aspernatur nulla rem ut corporis doloremque in harum. Facilis voluptate ducimus dolores omnis, necessitatibus exercitationem sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus facere possimus ut sequi, quaerat assumenda dolorum quis numquam veniam eveniet esse sit repellat. Sint aspernatur incidunt quidem suscipit.
+            </p>
+
+        </div>
+
+        <div>
+
+            <table id="companies-table" class="company-tb">
                 <tr>
                     <th>Empresa</th>
                     <th>Contato</th>
                     <th>País</th>
                 </tr>
-                <tr>
+                <tr data-company="GCO">
                     <td>Global CO</td>
                     <td>Jennifer Rios</td>
                     <td>Chile</td>
                 </tr>
-                <tr>
+                <tr data-company="CCL">
                     <td>Centro Comercial Laguna</td>
                     <td>Julia Lagos</td>
                     <td>Brasil</td>
                 </tr>
-                <tr>
+                <tr data-company="CEC">
                     <td>CE & C</td>
                     <td>Lucas Martins</td>
                     <td>Brasil</td>
                 </tr>
-                <tr>
+                <tr data-company="TT">
                     <td>Top Tech</td>
                     <td>Kelly Nunes</td>
                     <td>Portugal</td>
@@ -94,12 +107,6 @@
                 <li>Tigres Praianos</li>
             </ol>
 
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio pariatur unde suscipit! Quaerat,
-                voluptas necessitatibus, aut distinctio doloribus at voluptatum voluptatibus delectus quia inventore
-                nihil incidunt, iste eaque magni autem.
-            </p>
 
         </div>
 
